[tool.poetry]
name = "shoot_clash"
version = "0.1.0"
description = ""
authors = ["Pas-de-sushi", "baptiste0928", "Marfore"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
